fix: Overflow on simple code blocks

--- a/tools/convert/css/main.css
+++ b/tools/convert/css/main.css
@@ -886,6 +886,7 @@ html #main-markdown pre:not(.sourceCode) {
   border-width: 1.5pt;
   margin: 0.5ex;
   border-radius: 5pt;
+  overflow: auto;
 }
 html #main-markdown pre:not(.sourceCode) code {
   white-space: nowrap;
@@ -1405,6 +1406,7 @@ html #main-markdown-numbered pre:not(.sourceCode) {
   border-width: 1.5pt;
   margin: 0.5ex;
   border-radius: 5pt;
+  overflow: auto;
 }
 html #main-markdown-numbered pre:not(.sourceCode) code {
   white-space: nowrap;
