--- a/tools/convert/css/src/code.less
+++ b/tools/convert/css/src/code.less
@@ -32,6 +32,7 @@
 
     pre:not(.sourceCode) {
         .define-code-border();
+        overflow: auto;
         code {
             white-space: nowrap;
         }
